# numato-gpio

./: .coveragerc  .gitignore  .gitpod.Dockerfile  .pre-commit-config.yaml  LICENSE  Makefile  README.md  changelog.md  pyproject.toml  requirements-dev.txt  setup.py  tox.ini
.github/: pull_request_template.md
.github/workflows/: python-publish.yaml  python-publish.yml  python-test.yaml
doc/: troubleshooting.md
scripts/: __init__.py  broken_urls.py  troubleshoot.py
src/numato_gpio/: __init__.py  __main__.py  device_types.py  troubleshoot.py
src/numato_gpio/cli/: cmd_discover.py  cmd_gpio.py  cmd_id.py  cmd_numato.py  cmd_ver.py  utils.py
sys_tests/: test_numato.py
tests/: common.py  conftest.py  serialmock.py  test_common.py  test_init.py  test_main.py  test_notify.py
