[project]
name = "numato-gpio"
version = "0.13.1dev0"
description = "Python API for Numato GPIO Expanders"
authors = [{name = "Henning Claßen", email = "code@clssn.de"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
classifiers=[
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "pyserial>=3.1,<4",
]

[project.urls]
Homepage = "https://github.com/clssn/numato-gpio"
Repository = "https://github.com/clssn/numato-gpio.git"


[project.scripts]
numato-discover = "numato_gpio.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
