[project]
name = "numato-gpio"
version = "0.14.0"
description = "Python API for Numato GPIO Expanders"
authors = [{name = "Henning Claßen", email = "code@clssn.de"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9,<3.14"
classifiers=[
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
dependencies = [
    "pyserial>=3.1,<4",
    "rich>=14.0.0",
]

[project.urls]
Homepage = "https://github.com/clssn/numato-gpio"
Repository = "https://github.com/clssn/numato-gpio.git"


[project.scripts]
numato-discover = "numato_gpio.__main__:main"

[dependency-groups]
dev = [
    "codespell>=2.4.1",
    "mypy>=1.15.0",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "requests>=2.32.3",
    "ruff>=0.11.7",
    "types-requests>=2.32.0.20250328",
    "yamllint>=1.37.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = ["COM812", "ISC001", "D211", "D213", "D203", "EM102"]

[tool.mypy]
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
